public.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-west-2"
}

data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

resource "aws_instance" "bastion" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"

  key_name    = "AWS"                                  # Use AWS key for SSH
  subnet_id   = "subnet-0d04810da9f7a1207"             # Public Subnet
  vpc_security_group_ids = ["sg-00d423d220bf3177d"]    # Bastion-SG
  associate_public_ip_address = true                   # Retrieve public IP

  tags = {
    Name = "Bastion"
  }
}

resource "aws_instance" "nat" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"

  key_name    = "AWS"                                  # Use AWS key for SSH
  subnet_id   = "subnet-0d04810da9f7a1207"             # Public Subnet
  vpc_security_group_ids = ["sg-0f8f7418b9bf85183"]    # NAT-SG
  associate_public_ip_address = true                   # Retrieve public IP
  source_dest_check = false                            # Disable source/destination check for NAT instance

  tags = {
    Name = "NAT"
  }
}

resource "aws_route" "private1_default" {
  route_table_id = "rtb-00ea1659f5f551aeb"                                 # Private Subnet 1 Route Table
  destination_cidr_block = "0.0.0.0/0"                                     # Default route for all traffic
  network_interface_id = aws_instance.nat.primary_network_interface_id     # Route through NAT instance's primary network interface
}

resource "aws_route" "private2_default" {                                   
  route_table_id = "rtb-0379ab8857922fc90"                                 # Private Subnet 2 Route Table
  destination_cidr_block = "0.0.0.0/0"                                     # Default route for all traffic
  network_interface_id = aws_instance.nat.primary_network_interface_id     # Route through NAT instance's primary network interface
}

output "instances" {
  value = {
    bastion = {
      name = aws_instance.bastion.tags["Name"]
      ip   = aws_instance.bastion.public_ip
    }
    nat = {
      name = aws_instance.nat.tags["Name"]
      ip   = aws_instance.nat.public_ip
    }

  }
}
